# freeswitch-unimrcp

ars-tts/: README.md  docker-compose.yml  pom.xml
ars-tts/src/main/resources/: application.yml  logback-spring.xml
docker-build/: README.md  docker-compose.yml
docker-build/freeswitch/conf/autoload_configs/: amqp.conf.xml  amr.conf.xml  amrwb.conf.xml  callcenter.conf.xml  modules.conf.xml  msrp.conf.xml  signalwire.conf.xml  sndfile.conf.xml  spandsp.conf.xml  switch.conf.xml  tts_commandline.conf.xml  (+4 more)
docker-build/freeswitch/scripts/: ivr.lua
docker-build/scripts/: start.sh
docker-build/supervisor/conf.d/: freeswitch.conf
docker-build/unimrcp/conf/: unimrcpserver.xml
freeswitch/conf/: mime.types  vars.xml
freeswitch/conf/autoload_configs/: av.conf.xml  conference.conf.xml  db.conf.xml  event_socket.conf.xml  fifo.conf.xml  httapi.conf.xml  opus.conf.xml  pre_load_modules.conf.xml  sofia.conf.xml  timezones.conf.xml
freeswitch/conf/dialplan/: features.xml
freeswitch/conf/sip_profiles/: external.xml
freeswitch/grammar/: ivr.gram
scripts/: freeswitch.sql
supervisor/: supervisord.conf
supervisor/conf/: freeswitch.conf  unimrcp.conf
unimrcp/: README.md
unimrcp/unimrcp-1.5.0/: .gitignore
unimrcp/unimrcp-1.5.0/conf/: unimrcpserver.xml
unimrcp/unimrcp-1.5.0/plugins/demo-recog/: Makefile.am
unimrcp/unimrcp-1.5.0/plugins/demo-recog/src/: demo_recog_engine.c
unimrcp/unimrcp-1.5.0/plugins/demo-synth/: Makefile.am
unimrcp/unimrcp-1.5.0/plugins/demo-synth/include/: uv.h
unimrcp/unimrcp-1.5.0/plugins/demo-synth/src/: demo_synth_engine.c
(+97 files in other folders)
